# configistate

./: .gitignore  Makefile  README.md  environment.yml  meta.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  python-package.yaml  security.yml
etc/examples/: .confy.rc  sample.toml
src/configistate/: __init__.py  cli.py  config.py
test/: test_cli.py  test_config.py
